--- a/package.json
+++ b/package.json
@@ -15,7 +15,9 @@
     "mongoose": "^8.1.1",
     "morgan": "^1.10.0",
     "nanoid": "^5.0.4",
-    "swagger-ui-express": "^5.0.0"
+    "query-string": "^9.0.0",
+    "swagger-ui-express": "^5.0.0",
+    "url": "^0.11.3"
   },
   "devDependencies": {
     "nodemon": "^3.0.2"
