--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "dev": "nodemon ./app.js"
   },
   "dependencies": {
+    "axios": "^1.6.8",
     "bcrypt": "^5.1.1",
     "cors": "^2.8.5",
     "dotenv": "^16.4.1",
