--- a/package.json
+++ b/package.json
@@ -11,10 +11,12 @@
     "cors": "^2.8.5",
     "dotenv": "^16.4.1",
     "express": "^4.18.2",
+    "jimp": "^0.22.12",
     "joi": "^17.11.0",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.1.1",
     "morgan": "^1.10.0",
+    "multer": "^1.4.5-lts.1",
     "nanoid": "^5.0.4",
     "query-string": "^9.0.0",
     "swagger-ui-express": "^5.0.0",
