--- a/package.json
+++ b/package.json
@@ -8,10 +8,11 @@
   "dependencies": {
     "axios": "^1.6.8",
     "bcrypt": "^5.1.1",
-    "cloudinary": "^1.21.0",
+    "cloudinary": "^1.41.0",
     "cors": "^2.8.5",
     "dotenv": "^16.4.1",
     "express": "^4.18.2",
+    "gravatar": "^1.8.2",
     "jimp": "^0.22.12",
     "joi": "^17.11.0",
     "jsonwebtoken": "^9.0.2",
