--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,12 @@
+BASE_URL=
+FRONTED_URL=
 DB_HOST=
 PORT=
 SECRET_KEY=
+GOOGLE_CLOUD_ID=
+GOOGLE_CLIENT_SECRET=
+CLOUDINARY_CLOUD_NAME=
+CLOUDINARY_API_KEY=
+CLOUDINARY_API_SECRET=
+UKR_NET_PASS=
+UKR_NET_FROM=
