--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "multer": "^1.4.5-lts.1",
     "multer-storage-cloudinary": "^4.0.0",
     "nanoid": "^5.0.4",
+    "nodemailer": "^6.9.13",
     "query-string": "^9.0.0",
     "swagger-ui-express": "^5.0.0",
     "url": "^0.11.3"
